--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Quiks | Checkout Simplified</title>
+    <title>InstaHelp | Instant Help</title>
     <link rel="shortcut icon" href="quiks.png" type="image/x-icon">
     <meta name="msapplication-TileColor" content="#663fb5">
     <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
