--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="msapplication-TileColor" content="#438eef">
     <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#438eef">
-    <link rel="stylesheet" href="landio.css">
+    <link rel="stylesheet" href="templates/landio.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <style>
@@ -19,7 +19,7 @@
       }
       .bg {
         /* The image used */
-        background-image: url("nacho-arteaga-149539.jpg");
+        background-image: url("templates/nacho-arteaga-149539.jpg");
 
         /* Full height */
         height: 100%;
@@ -40,7 +40,7 @@
 <nav class="navbar navbar-dark bg-inverse bg-inverse-custom navbar-fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="logo.png" height="60">
+      <img src="templates/logo.png" height="60">
       <span class="sr-only">InstaHelp</span>
     </a>
     <a class="navbar-toggler hidden-md-up pull-xs-right" data-toggle="collapse" href="#collapsingNavbar" aria-expanded="false" aria-controls="collapsingNavbar">
@@ -53,12 +53,12 @@
       <ul class="nav navbar-nav pull-xs-right">
         <li class="nav-item dropdown hidden-sm-down textselect-off">
           <a class="nav-link dropdown-toggle nav-dropdown-user" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img src="face1.jpg" height="40" width="40" alt="Avatar" class="img-circle">
+            <img src="templates/face1.jpg" height="40" width="40" alt="Avatar" class="img-circle">
           </a>
           <div class="dropdown-menu dropdown-menu-right dropdown-menu-user dropdown-menu-animated" aria-labelledby="dropdownMenu2">
             <div class="media">
               <div class="media-left">
-                <img src="face1.jpg" height="60" width="60" alt="Avatar" class="img-circle">
+                <img src="templates/face1.jpg" height="60" width="60" alt="Avatar" class="img-circle">
               </div>
               <div class="media-body media-middle">
                 <h5 class="media-heading">Jay</h5>
@@ -76,7 +76,7 @@
     <div id="collapsingMobileUser" class="collapse navbar-toggleable-custom dropdown-menu-custom p-x-1 hidden-md-up" role="tabpanel" aria-labelledby="collapsingMobileUser">
       <div class="media m-t-1">
         <div class="media-left">
-          <img src="face1.jpg" height="60" width="60" alt="Avatar" class="img-circle">
+          <img src="templates/face1.jpg" height="60" width="60" alt="Avatar" class="img-circle">
         </div>
         <div class="media-body media-middle">
           <h5 class="media-heading">Jay</h5>
@@ -86,9 +86,6 @@
       <a href="#" class="dropdown-item text-uppercase">View Profile</a>
       <a href="#" class="dropdown-item text-uppercase">Subscription &amp; billing</a>
       <a href="#" class="dropdown-item text-uppercase text-muted">Log out</a>
-      <a href="#" class="btn-circle has-gradient pull-xs-right m-b-1">
-        <span class="sr-only">Edit</span>
-        <span class="icon-edit"></span>
       </a>
     </div>
   </div>
@@ -104,9 +101,9 @@
     <h2 class="m-b-3">Get help, <em>instantly</em>, at anytime, anywhere!</h2>
     <a class="btn btn-outline-secondary m-b-1" href="#" role="button" style="border-color: #25232a;">24x7 Help</a>
     <ul class="nav nav-inline social-share">
-      <li class="nav-item"><a class="nav-link" href="#"><img src="icon-twitter.png">1024</a></li>
-      <li class="nav-item"><a class="nav-link" href="#"><img src="icon-facebook.png" height="24"> 562</a></li>
-      <li class="nav-item"><a class="nav-link" href="#"><img src="icon-linkedin.png" height="24"> 356</a></li>
+      <li class="nav-item"><a class="nav-link" href="#"><img src="templates/icon-twitter.png">1024</a></li>
+      <li class="nav-item"><a class="nav-link" href="#"><img src="templates/icon-facebook.png" height="24"> 562</a></li>
+      <li class="nav-item"><a class="nav-link" href="#"><img src="templates/icon-linkedin.png" height="24"> 356</a></li>
     </ul>
   </div>
 </header>
@@ -119,7 +116,7 @@
   <div class="container">
     <h3 class="wp wp-1">Be your own superhero and fight the crime, fearlessly</h3>
     <p class="lead wp wp-2">Don't worry, we've got your back. </p>
-    <img src="mock.jpg" style="height: 600px" width="100%" alt="Superhero mock" class="img-fluid wp wp-3">
+    <img src="templates/mock.jpg" style="height: 600px" width="100%" alt="Superhero mock" class="img-fluid wp wp-3">
   </div>
 </section>
 
@@ -132,7 +129,7 @@
       <div class="col-md-4">
         <div class="card">
           <div class="card-block">
-            <img src="005-shield.png">
+            <img src="templates/005-shield.png">
             <h4 class="card-title">25</h4>
             <h6 class="card-subtitle text-muted">Security Features</h6>
             <p class="card-text">With over dozens of our spectacular features you are never alone. Keep your loved ones connected. Find a near buy police station and get instant backup. </p>
@@ -142,7 +139,7 @@
       <div class="col-md-4">
         <div class="card">
           <div class="card-block">
-            <img src="005-shield.png">
+            <img src="templates/006-electric-ray.png">
             <h4 class="card-title">Ultra</h4>
             <h6 class="card-subtitle text-muted">Sleek Design</h6>
             <p class="card-text">Our clean design enables hassle free user-app interaction. Anyone can easily use this application anywhere.</p>
@@ -173,46 +170,46 @@
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
           <blockquote class="blockquote">
-            <img src="face1.jpg" height="80" width="80" alt="Avatar" class="img-circle">
+            <img src="templates/face1.jpg" height="80" width="80" alt="Avatar" class="img-circle">
             <p class="h3">It is very important for women to feel secure first, if you want them to be independent.</p>
             <footer>Anushka Sharma</footer>
           </blockquote>
         </div>
         <div class="carousel-item">
           <blockquote class="blockquote">
-            <img src="face2.jpg" height="80" width="80" alt="Avatar" class="img-circle">
+            <img src="templates/face2.jpg" height="80" width="80" alt="Avatar" class="img-circle">
             <p class="h3">It's a relief for many who get anxious whenever their loved ones step out of the house.</p>
             <footer> P. V. Sindhu <br> Olympics silver medalist</footer>
           </blockquote>
         </div>
         <div class="carousel-item">
           <blockquote class="blockquote">
-            <img src="face3.jpg" height="80" width="80" alt="Avatar" class="img-circle">
+            <img src="templates/face3.jpg" height="80" width="80" alt="Avatar" class="img-circle">
             <p class="h3">Excellent way of ensuring safety of your loved ones.</p>
             <footer>Shahrukh Khan<br>Needs no introduction!</footer>
           </blockquote>
         </div>
         <div class="carousel-item">
           <blockquote class="blockquote">
-            <img src="face4.jpg" height="80" width="80" alt="Avatar" class="img-circle">
+            <img src="templates/face4.jpg" height="80" width="80" alt="Avatar" class="img-circle">
             <p class="h3">A much needed idea put effectively into use!</p>
             <footer>Vijay Shekhar Sharma<br>Founder of Paytm</footer>
           </blockquote>
         </div>
         <div class="carousel-item">
           <blockquote class="blockquote">
-            <img src="face5.jpg" height="80" width="80" alt="Avatar" class="img-circle">
+            <img src="templates/face5.jpg" height="80" width="80" alt="Avatar" class="img-circle">
             <p class="h3">Great step to make our soceity more responsible and crime free.</p>
             <footer>Maneka Gandhi <br>Union Minister of women and Child Development</footer>
           </blockquote>
         </div>
       </div>
       <ol class="carousel-indicators">
-        <li class="active"><img src="face1.jpg" alt="Navigation avatar" data-target="#carousel-testimonials" data-slide-to="0" class="img-fluid img-circle"></li>
-        <li><img src="face2.jpg" alt="Navigation avatar" data-target="#carousel-testimonials" data-slide-to="1" class="img-fluid img-circle"></li>
-        <li><img src="face3.jpg" alt="Navigation avatar" data-target="#carousel-testimonials" data-slide-to="2" class="img-fluid img-circle"></li>
-        <li><img src="face4.jpg" alt="Navigation avatar" data-target="#carousel-testimonials" data-slide-to="3" class="img-fluid img-circle"></li>
-        <li><img src="face5.jpg" alt="Navigation avatar" data-target="#carousel-testimonials" data-slide-to="4" class="img-fluid img-circle"></li>
+        <li class="active"><img src="templates/face1.jpg" alt="Navigation avatar" data-target="#carousel-testimonials" data-slide-to="0" class="img-fluid img-circle"></li>
+        <li><img src="templates/face2.jpg" alt="Navigation avatar" data-target="#carousel-testimonials" data-slide-to="1" class="img-fluid img-circle"></li>
+        <li><img src="templates/face3.jpg" alt="Navigation avatar" data-target="#carousel-testimonials" data-slide-to="2" class="img-fluid img-circle"></li>
+        <li><img src="templates/face4.jpg" alt="Navigation avatar" data-target="#carousel-testimonials" data-slide-to="3" class="img-fluid img-circle"></li>
+        <li><img src="templates/face5.jpg" alt="Navigation avatar" data-target="#carousel-testimonials" data-slide-to="4" class="img-fluid img-circle"></li>
       </ol>
     </div>
   </div>
@@ -271,7 +268,7 @@
             <div class="col-md-6 col-lg-5">
                 <div class="media">
                   <div class="media-left">
-                    <img src="logo.png" height="40">
+                    <img src="templates/logo.png" height="40">
                   </div>
                     <small class="media-body media-bottom">
                         &copy; InstaHelp 2017 <br>
@@ -286,6 +283,6 @@
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="landio.min.js"></script>
+<script src="templates/landio.min.js"></script>
 </body>
 </html>
